Mess with ignore files & fix warnings

--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,13 @@
 *.log
 Debug
 Release
-ipch
+
+Release_Binary/AIModuleLoader/Source/
+Release_Binary/Chaoslauncher/Plugins/BWAPI_*
+Release_Binary/ExampleAIClient/Source/
+Release_Binary/ExampleAIModule/Source/
+Release_Binary/MPQdraft/BWAPI_*
+Release_Binary/Starcraft/SNP_DirectIP.snp
+Release_Binary/Starcraft/bwapi-data/BWAPI*.dll
+bwapi/libReplayToolTest/TestData/Replay_Tool_Actual.exe
+bwapi/icph/
