Unit documentation links to wikis and official site

--- a/.gitignore
+++ b/.gitignore
@@ -16,5 +16,5 @@ Release_Binary/MPQdraft/BWAPI_*
 Release_Binary/Starcraft/SNP_DirectIP.snp
 Release_Binary/Starcraft/bwapi-data/BWAPI*.dll
 bwapi/libReplayToolTest/TestData/Replay_Tool_Actual.exe
-bwapi/icph/
+bwapi/ipch/
 Release_Binary/Chaoslauncher/__log.txt
