--- a/bwapi/ExampleTournamentModule/ExampleTournamentModule.vcproj
+++ b/bwapi/ExampleTournamentModule/ExampleTournamentModule.vcproj
@@ -61,7 +61,7 @@
 			/>
 			<Tool
 				Name="VCPreLinkEventTool"
-				CommandLine="XCOPY &quot;$(SolutionDir)ExampleTournamentModule\Source\*.h&quot; &quot;$(SolutionDir)..\Release_Binary\ExampleTournamentModule\Source\&quot; /S /C /I /R /Y&#x0D;&#x0A;XCOPY &quot;$(SolutionDir)ExampleTournamentModule\Source\*.cpp&quot; &quot;$(SolutionDir)..\Release_Binary\ExampleTournamentModule\Source\&quot; /S /C /I /R /Y&#x0D;&#x0A;"
+				CommandLine=""
 			/>
 			<Tool
 				Name="VCLinkerTool"
