--- a/bwapi/BWAPILIB/BWAPILIB.vcxproj
+++ b/bwapi/BWAPILIB/BWAPILIB.vcxproj
@@ -59,8 +59,28 @@
       <WholeProgramOptimization>true</WholeProgramOptimization>
     </ClCompile>
     <PreLinkEvent>
-      <Message>Copying include files to final release</Message>
+      <Message>Copying include files, BWAPILIB project, and example projects to final release</Message>
       <Command>XCOPY "$(SolutionDir)include\*.h" "$(SolutionDir)..\Release_Binary\include" /S /C /I /R /Y
+XCOPY "$(SolutionDir)ExampleAIModule\*.vcxproj" "$(SolutionDir)..\Release_Binary\ExampleAIModule" /S /C /I /R /Y
+XCOPY "$(SolutionDir)ExampleAIModule\*.vcxproj.filters" "$(SolutionDir)..\Release_Binary\ExampleAIModule" /S /C /I /R /Y
+XCOPY "$(SolutionDir)ExampleAIModule\*.h" "$(SolutionDir)..\Release_Binary\ExampleAIModule" /S /C /I /R /Y
+XCOPY "$(SolutionDir)ExampleAIModule\*.cpp" "$(SolutionDir)..\Release_Binary\ExampleAIModule" /S /C /I /R /Y
+XCOPY "$(SolutionDir)ExampleAIClient\*.vcxproj" "$(SolutionDir)..\Release_Binary\ExampleAIClient" /S /C /I /R /Y
+XCOPY "$(SolutionDir)ExampleAIClient\*.vcxproj.filters" "$(SolutionDir)..\Release_Binary\ExampleAIClient" /S /C /I /R /Y
+XCOPY "$(SolutionDir)ExampleAIClient\*.cpp" "$(SolutionDir)..\Release_Binary\ExampleAIClient" /S /C /I /R /Y
+XCOPY "$(SolutionDir)ExampleAIClient\*.h" "$(SolutionDir)..\Release_Binary\ExampleAIClient" /S /C /I /R /Y
+XCOPY "$(SolutionDir)ExampleTournamentModule\*.vcxproj" "$(SolutionDir)..\Release_Binary\ExampleTournamentModule" /S /C /I /R /Y
+XCOPY "$(SolutionDir)ExampleTournamentModule\*.vcxproj.filters" "$(SolutionDir)..\Release_Binary\ExampleTournamentModule" /S /C /I /R /Y
+XCOPY "$(SolutionDir)ExampleTournamentModule\*.cpp" "$(SolutionDir)..\Release_Binary\ExampleTournamentModule" /S /C /I /R /Y
+XCOPY "$(SolutionDir)ExampleTournamentModule\*.h" "$(SolutionDir)..\Release_Binary\ExampleTournamentModule" /S /C /I /R /Y
+XCOPY "$(SolutionDir)AIModuleLoader\*.vcxproj" "$(SolutionDir)..\Release_Binary\AIModuleLoader" /S /C /I /R /Y
+XCOPY "$(SolutionDir)AIModuleLoader\*.vcxproj.filters" "$(SolutionDir)..\Release_Binary\AIModuleLoader" /S /C /I /R /Y
+XCOPY "$(SolutionDir)AIModuleLoader\*.cpp" "$(SolutionDir)..\Release_Binary\AIModuleLoader" /S /C /I /R /Y
+XCOPY "$(SolutionDir)AIModuleLoader\*.h" "$(SolutionDir)..\Release_Binary\AIModuleLoader" /S /C /I /R /Y
+XCOPY "$(SolutionDir)BWAPILIB\*.vcxproj" "$(SolutionDir)..\Release_Binary\BWAPILIB" /S /C /I /R /Y
+XCOPY "$(SolutionDir)BWAPILIB\*.vcxproj.filters" "$(SolutionDir)..\Release_Binary\BWAPILIB" /S /C /I /R /Y
+XCOPY "$(SolutionDir)BWAPILIB\*.cpp" "$(SolutionDir)..\Release_Binary\BWAPILIB" /S /C /I /R /Y
+XCOPY "$(SolutionDir)BWAPILIB\*.h" "$(SolutionDir)..\Release_Binary\BWAPILIB" /S /C /I /R /Y
 </Command>
     </PreLinkEvent>
     <Lib>
@@ -89,8 +109,28 @@ COPY /y "$(OutDir)$(TargetName)$(TargetExt)" "..\lib\BWAPI.lib"</Command>
       <DisableSpecificWarnings>4480</DisableSpecificWarnings>
     </ClCompile>
     <PreLinkEvent>
-      <Message>Copying include files to final release</Message>
+      <Message>Copying include files, BWAPILIB project, and example projects to final release</Message>
       <Command>XCOPY "$(SolutionDir)include\*.h" "$(SolutionDir)..\Release_Binary\include" /S /C /I /R /Y
+XCOPY "$(SolutionDir)ExampleAIModule\*.vcxproj" "$(SolutionDir)..\Release_Binary\ExampleAIModule" /S /C /I /R /Y
+XCOPY "$(SolutionDir)ExampleAIModule\*.vcxproj.filters" "$(SolutionDir)..\Release_Binary\ExampleAIModule" /S /C /I /R /Y
+XCOPY "$(SolutionDir)ExampleAIModule\*.h" "$(SolutionDir)..\Release_Binary\ExampleAIModule" /S /C /I /R /Y
+XCOPY "$(SolutionDir)ExampleAIModule\*.cpp" "$(SolutionDir)..\Release_Binary\ExampleAIModule" /S /C /I /R /Y
+XCOPY "$(SolutionDir)ExampleAIClient\*.vcxproj" "$(SolutionDir)..\Release_Binary\ExampleAIClient" /S /C /I /R /Y
+XCOPY "$(SolutionDir)ExampleAIClient\*.vcxproj.filters" "$(SolutionDir)..\Release_Binary\ExampleAIClient" /S /C /I /R /Y
+XCOPY "$(SolutionDir)ExampleAIClient\*.cpp" "$(SolutionDir)..\Release_Binary\ExampleAIClient" /S /C /I /R /Y
+XCOPY "$(SolutionDir)ExampleAIClient\*.h" "$(SolutionDir)..\Release_Binary\ExampleAIClient" /S /C /I /R /Y
+XCOPY "$(SolutionDir)ExampleTournamentModule\*.vcxproj" "$(SolutionDir)..\Release_Binary\ExampleTournamentModule" /S /C /I /R /Y
+XCOPY "$(SolutionDir)ExampleTournamentModule\*.vcxproj.filters" "$(SolutionDir)..\Release_Binary\ExampleTournamentModule" /S /C /I /R /Y
+XCOPY "$(SolutionDir)ExampleTournamentModule\*.cpp" "$(SolutionDir)..\Release_Binary\ExampleTournamentModule" /S /C /I /R /Y
+XCOPY "$(SolutionDir)ExampleTournamentModule\*.h" "$(SolutionDir)..\Release_Binary\ExampleTournamentModule" /S /C /I /R /Y
+XCOPY "$(SolutionDir)AIModuleLoader\*.vcxproj" "$(SolutionDir)..\Release_Binary\AIModuleLoader" /S /C /I /R /Y
+XCOPY "$(SolutionDir)AIModuleLoader\*.vcxproj.filters" "$(SolutionDir)..\Release_Binary\AIModuleLoader" /S /C /I /R /Y
+XCOPY "$(SolutionDir)AIModuleLoader\*.cpp" "$(SolutionDir)..\Release_Binary\AIModuleLoader" /S /C /I /R /Y
+XCOPY "$(SolutionDir)AIModuleLoader\*.h" "$(SolutionDir)..\Release_Binary\AIModuleLoader" /S /C /I /R /Y
+XCOPY "$(SolutionDir)BWAPILIB\*.vcxproj" "$(SolutionDir)..\Release_Binary\BWAPILIB" /S /C /I /R /Y
+XCOPY "$(SolutionDir)BWAPILIB\*.vcxproj.filters" "$(SolutionDir)..\Release_Binary\BWAPILIB" /S /C /I /R /Y
+XCOPY "$(SolutionDir)BWAPILIB\*.cpp" "$(SolutionDir)..\Release_Binary\BWAPILIB" /S /C /I /R /Y
+XCOPY "$(SolutionDir)BWAPILIB\*.h" "$(SolutionDir)..\Release_Binary\BWAPILIB" /S /C /I /R /Y
 </Command>
     </PreLinkEvent>
     <Lib>
